--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -28,5 +28,8 @@
             </form>
         </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
