--- a/src/main/resources/static/product-list.html
+++ b/src/main/resources/static/product-list.html
@@ -1,33 +1,59 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.tymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>상품 관리 페이지</title>
+    <title>상품 목록</title>
+    <script>
+        async function fetchProducts(keyword = '') {
+            const response = await fetch(`/product/all?keyword=${keyword}`);
+            const products = await response.json();
+            const tbody = document.getElementById('product-list');
+            tbody.innerHTML = '';
+            products.forEach(product => {
+                const row = `<tr>
+                    <td>${product.id}</td>
+                    <td>${product.name}</td>
+                    <td>${product.price}</td>
+                    <td>${product.imageUrl}</td>
+                    <td>
+                        <a href="/product-form.html?id=${product.id}">Edit</a>
+                        <a href="#" onclick="deleteProduct(${product.id})">Delete</a>
+                    </td>
+                </tr>`;
+                tbody.innerHTML += row;
+            });
+        }
+
+        async function deleteProduct(id) {
+            await fetch(`/product/delete/${id}`, { method: 'GET' });
+            fetchProducts();
+        }
+
+        window.onload = () => {
+            fetchProducts();
+        };
+    </script>
 </head>
 <body>
 <h1>상품 목록</h1>
-<a href="/products/new">Add New Product</a>
+<a href="/product-form.html">새 상품 추가</a>
+<form onsubmit="event.preventDefault(); fetchProducts(document.getElementById('keyword').value);">
+    <input type="text" id="keyword" placeholder="상품 이름 검색">
+    <button type="submit">검색</button>
+</form>
+
 <table>
     <thead>
     <tr>
         <th>ID</th>
         <th>Name</th>
         <th>Price</th>
-        <th>imageUrl</th>
-        <th>Action</th>
+        <th>URL</th>
+        <th>Actions</th>
     </tr>
     </thead>
-    <tbody>
-    <tr th:each="product : ${products}">
-        <td th:text="${product.id}"</td>
-        <td th:text="${product.name}"></td>
-        <td th:text="${product.price}"></td>
-        <td th:text="${product.imageUrl}"></td>
-        <td>
-            <a th:href="@{/products/edit/{id}(id=${product.id})}">Edit</a>
-            <a th:href="@{/products/delete/{id}(id=${product.id})}">Delete</a>
-        </td>
-    </tr>
+    <tbody id="product-list">
+    <!-- Products will be injected here by JavaScript -->
     </tbody>
 </table>
 </body>
