fix(product-form.html): modify product registration button

--- a/src/main/resources/static/product-list.html
+++ b/src/main/resources/static/product-list.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 <h1>상품 목록</h1>
-<a href="/product-form.html">새 상품 추가</a>
+<a href="./product-form.html">새 상품 추가</a>
 <form onsubmit="event.preventDefault(); fetchProducts(document.getElementById('keyword').value);">
     <input type="text" id="keyword" placeholder="상품 이름 검색">
     <button type="submit">검색</button>
