--- a/src/main/resources/static/product-form.html
+++ b/src/main/resources/static/product-form.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>상품 등록 페이지</title>
 </head>
 <body>
-<h1 th:text="${product.id == null} ? 'Add New Product' : 'Edit Product'"></h1>
-<form th:action="@{${product.id == null} ? '/products' : '/products/' + ${product.id}}" th:object="${product}" method="post">
+<h1>상품 등록 페이지</h1>
+<form action="http://localhost:8080/product/new" method="post">
     <div>
-        <label>Name</label>
-        <input type="text" th:field="*{name}"/>
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" required>
     </div>
     <div>
-        <label>Price</label>
-        <input type="text" th:field="*{price}"/>
+        <label for="price">Price</label>
+        <input type="number" id="price" name="price" required>
     </div>
     <div>
-        <label>URL</label>
-        <input type="text" th:field="*{url}"/>
+        <label for="imageUrl">Image URL</label>
+        <input type="text" id="imageUrl" name="imageUrl" required>
     </div>
     <div>
-        <button type="submit">상품 등록</button>
+        <button type="submit">등록</button>
     </div>
 </form>
-<a href="/products">목록으로 돌아가기</a>
+<a href="./product-list.html">목록으로 돌아가기</a>
 </body>
 </html>
