fix: index.html 관리자 페이지 주소 변경
/admin -> /view/admin

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
 <div class="container">
   <h1 class="my-4">메인 화면</h1>
   <hr>
-  <a href="/admin" class="btn btn-primary">관리자 페이지로 이동</a>
+  <a href="/view/admin" class="btn btn-primary">관리자 페이지로 이동</a>
 </div>
 </body>
 </html>
