--- a/src/main/resources/static/AdminProductList.html
+++ b/src/main/resources/static/AdminProductList.html
@@ -12,7 +12,7 @@
   <h2>신규 데이터 입력</h2>
   <input type="text" id="new-name" placeholder="Name">
   <input type="text" id="new-price" placeholder="Price">
-  <input type="text" id="new-imageUrl" placeholder="imageUrl">
+  <input type="text" id="new-imageUrl" placeholder="ImageUrl">
   <button id="add-button">Add</button>
 </div>
 <hr>
